--- a/style/style.css
+++ b/style/style.css
@@ -1,9 +1,9 @@
 /* VARIABLES */
 :root {
-  --pink: #fc60a7;
-  --light-blue: #00f3ff;
-  --yellow: #fbff21;
-  --white: #ffffff;
+  --pink: #fc60f4;
+  --light-blue: #ff006a;
+  --yellow: #21ffe1;
+  --white: #0c0b0b;
 }
 
 /*  RESET
@@ -148,6 +148,7 @@ table {
   from {
     -webkit-transform: scale3d(1, 1, 1);
     transform: scale3d(1, 1, 1);
+  
   }
 
   10%,
@@ -213,6 +214,7 @@ table {
 .tada {
   -webkit-animation-name: tada;
   animation-name: tada;
+  animation-duration: 1s;
 }
 
 @-webkit-keyframes bounceIn {
@@ -333,7 +335,7 @@ body {
 }
 
 .container {
-  width: 80%;
+  width: 90%;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -342,27 +344,32 @@ body {
 }
 
 h1 {
-  font-family: "Bangers", cursive;
-  font-size: 200%;
-  margin-bottom: 20px;
+  font-family: "Aharoni", cursive;
+  font-size: 500%;
+  margin-bottom: 50px;
   color: var(--light-blue);
 }
 
 button,
 .roulette {
-  font-family: "Fredoka One", cursive;
+  font-size: 500%;
+  margin-bottom: 50px;
+  color: var(--light-blue);
 }
 
 .roulette {
-  height: 26px;
+  height: 250px;
+  font-family: "Aharoni", cursive;
+  font-size: 500%;
   color: var(--yellow);
 }
 
 button {
-  background-color: transparent;
-  padding: 15px;
-  margin-top: 40px;
-  border: 4px solid var(--yellow);
+  background-color: black;
+  padding: 50px;
+  margin-top: 100px;
+  font-size: 200%;
+  border: 10px solid var(--yellow);
   color: var(--yellow);
 }
 
@@ -371,18 +378,18 @@ button:focus,
 button:active {
   background-color: var(--yellow);
   color: var(--pink);
-  -webkit-animation-duration: 0.75s;
-  animation-duration: 0.75s;
-  -webkit-animation-name: bounceIn;
-  animation-name: bounceIn;
+  -webkit-animation-duration: 0.90s;
+  animation-duration: 0.90s;
+  -webkit-animation-name: bouncein;
+  animation-name: bouncein;
   outline: none;
 }
 
 footer {
-  font-family: "Fredoka One", cursive;
-  font-size: 12px;
+  font-family: "Aharoni", cursive;
+  font-size: 20px;
   color: var(--white);
-  padding-top: 30px;
+  padding-top: 50px;
 }
 .link-to {
   text-decoration: none;
